[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/pause/level_info/level_info.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/pause/map/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/pause/options/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/pause_content.gd" type="Script" id=6]
[ext_resource path="res://gui/pause/unpause.gd" type="Script" id=25]
[ext_resource path="res://gui/hud/buttons/mobile_buttons.png" type="Texture" id=28]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 28 )
region = Rect2( 0, 105, 20, 21 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 28 )
region = Rect2( 20, 105, 20, 21 )

[node name="PauseContent" type="Control" groups=["pause"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 19.0
margin_right = -37.0
margin_bottom = -33.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="LevelInfo" parent="." instance=ExtResource( 1 )]

[node name="MapMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FluddMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="ExitMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnpauseControl" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 2.0
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unpause" type="TouchScreenButton" parent="UnpauseControl" groups=["pause"]]
position = Vector2( -20, 0 )
normal = SubResource( 8 )
pressed = SubResource( 9 )

[connection signal="pressed" from="UnpauseControl/Unpause" to="UnpauseControl" method="_on_Unpause_pressed"]
[connection signal="released" from="UnpauseControl/Unpause" to="UnpauseControl" method="_on_Unpause_released"]
